--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ after_success:
   - docker build -t tyagiankur07/multi-server ./server
   - docker build -t tyagiankur07/multi-worker ./worker
   # Log in to the docker CLI
+  # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
   - docker push tyagiankur07/multi-client
