--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - docker build -t tyagiankur07/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true tyagiankur07/react-test npm test
+  - docker run -e CI=true tyagiankur07/react-test npm test -- --coverage
 
 after_success:
   - docker build -t tyagiankur07/multi-client ./client
